fix overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body {
   padding: 0;
   font-family: Lifecraftregular;
   background-color: black;
+  overflow-x: hidden;
 }
 
 .intro {
